--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="animated-bear-kicking-face-bp58k2jjua11h88e.webp" alt="pic">
             </div>
             <h2>Baat sun meri...?</h2>
-            <div class="inlin-btn">
+            <div class="inline-btn">
                 <button class="sunraha" disabled>han sun raha!</button>
                 <button class="aap" id="btn1" onclick="name1()">Aap ne bola tou sunna hi parega</button>
             </div>
@@ -31,13 +31,13 @@
     <section class="paragraph" id="sec2">
         <div class="main pg2">
            
-                <img src="WhatsApp Image 2025-02-08 at 23.03.53_3383ce38.jpg" alt="pic" width="450"
+                <img src="WhatsApp Image 2025-02-08 at 23.03.53_3383ce38.jpg" id="roohpic" alt="pic" width="450"
                 height="500">
             
             <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, veniam sint, commodi aperiam nulla
                 dolorum
                 sunt hic odit ea id, ex nobis doloribus minima mollitia.</h2>
-            <div class="button">
+            <div class="button" id="roohsection">
                 <button class="sunraha" disabled>acha</button>
                 <button class="aap" id="btn2" onclick="name2()">Oh ThankYou yrr yehi tou suna tha mene</button>
             </div>
@@ -45,6 +45,7 @@
     </section>
     <section class="paragraph" id="sec3">
         <div class="main">
+            <img src="milk-and-mocha.gif" alt="pic">
             <h2>Abhi meri bt puri nhi hui sunn poori</h2>
             <div class="button">
                 <button class="sunraha" disabled>acha</button>
